新增视频模块

--- a/module_mine/src/main/res/values-en/strings.xml
+++ b/module_mine/src/main/res/values-en/strings.xml
@@ -5,6 +5,7 @@
     <string name="mine_gradle_flag">Gradle -</string>
     <string name="mine_tv_rank">Rank -</string>
     <string name="mine_me_points">Points</string>
+    <string name="mine_me_vedio">Vedio</string>
     <string name="mine_me_collect">Collection</string>
     <string name="mine_me_share_articles">Share</string>
     <string name="mine_me_history_records">Reading history</string>
