基本完成视频播放

--- a/module_mine/src/main/res/values/strings.xml
+++ b/module_mine/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="mine_gradle_flag">等级 -</string>
     <string name="mine_tv_rank">排名第 -</string>
     <string name="mine_me_points">我的积分</string>
-    <string name="mine_me_vedio">推荐视频</string>
+    <string name="mine_me_video">推荐视频</string>
     <string name="mine_me_collect">我的收藏</string>
     <string name="mine_me_share_articles">我的分享</string>
     <string name="mine_me_history_records">阅读历史</string>
