完善段子视频列表模块

--- a/module_video/src/main/res/values-en/strings.xml
+++ b/module_video/src/main/res/values-en/strings.xml
@@ -8,5 +8,8 @@
     <string name="video_icon_comment">&#xe621;</string>
     <!-- 更多 -->
     <string name="video_icon_more">&#xe61b;</string>
+    <!--视频播放页面标题-->
+    <string name="video_play_toolbar_title">recommend</string>
+
 
 </resources>
