完善日报首页页面基本大致展示

--- a/module_eye_daily/src/main/res/values-en/strings.xml
+++ b/module_eye_daily/src/main/res/values-en/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="eye_daily_app_name">eye_daily</string>
+    <string name="eye_daily_app_name">Eye_daily</string>
+    <string name="eye_daily_toolbar_title">Daily</string>
 </resources>
