--- a/module_eye_daily/src/main/res/values-en/strings.xml
+++ b/module_eye_daily/src/main/res/values-en/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="eye_daily_app_name">Eye_daily</string>
     <string name="eye_daily_toolbar_title">Daily</string>
+    <string name="eye_daily_today_recommend">Today Selection</string>
 </resources>
