--- a/module_eye_daily/src/main/res/values/strings.xml
+++ b/module_eye_daily/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="eye_daily_app_name">开眼日报</string>
     <string name="eye_daily_toolbar_title">日报</string>
+    <string name="eye_daily_today_recommend">今日精选</string>
 </resources>
