--- a/library_base/src/main/res/values-en/strings.xml
+++ b/library_base/src/main/res/values-en/strings.xml
@@ -6,4 +6,5 @@
     <string name="base_loading">request...</string>
     <string name="base_unavailable_text">Confirm that the network connection is not available, please check the network settings</string>
     <string name="base_request_failure">Request failed, please try again later</string>
+    <string name="base_daily_share_image">share_image</string>
 </resources>
