完成发现模块基础功能

--- a/module_eye_discover/src/main/res/values-en/strings.xml
+++ b/module_eye_discover/src/main/res/values-en/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="eye_discover_app_name">module_eye_discover</string>
+    <string name="eye_discover_toolbar_name">Discover</string>
 </resources>
