--- a/module_eye_discover/src/main/res/values/strings.xml
+++ b/module_eye_discover/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="eye_discover_app_name">module_eye_discover</string>
     <string name="eye_discover_toolbar_name">发现</string>
+    <string name="eye_discover_share_element_container">shared_element_container</string>
 </resources>
