完成专题详细页面初步渲染逻辑

--- a/module_eye_discover/src/main/res/values-en/strings.xml
+++ b/module_eye_discover/src/main/res/values-en/strings.xml
@@ -2,4 +2,7 @@
     <string name="eye_discover_app_name">module_eye_discover</string>
     <string name="eye_discover_toolbar_name">Discover</string>
     <string name="eye_discover_share_element_container">shared_element_container</string>
+    <string name="eye_discover_special_topic_collect">collect</string>
+    <string name="eye_discover_special_topic_share">share</string>
+    <string name="eye_discover_publish">publish：</string>
 </resources>
