--- a/module_eye_discover/src/main/res/values/strings.xml
+++ b/module_eye_discover/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="eye_discover_app_name">module_eye_discover</string>
     <string name="eye_discover_toolbar_name">发现</string>
     <string name="eye_discover_share_element_container">shared_element_container</string>
+    <string name="eye_discover_special_topic_collect">收藏</string>
+    <string name="eye_discover_special_topic_share">分享</string>
+    <string name="eye_discover_publish">发布：</string>
 </resources>
