完善专题策划页面，改善toolbar标题赋值逻辑

--- a/library_widget/src/main/res/values/strings.xml
+++ b/library_widget/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="widget_gesture_password_again">请再次录入手势密码</string>
     <string name="widget_gesture_password_success">成功设置手势密码</string>
     <string name="widget_expand_hint">展开</string>
-    <string name="widget_shrink_hint">收缩</string>
+    <string name="widget_shrink_hint">收起</string>
 </resources>
