完善增加分享组件逻辑

--- a/library_share/src/main/res/values-en/strings.xml
+++ b/library_share/src/main/res/values-en/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="share_tv_save">save</string>
+    <string name="share_tv_save">savePhoto</string>
+    <string name="share_save_photo_success">successful to save photo</string>
+    <string name="share_save_photo_failure">failed to save photo</string>
+
 </resources>
