--- a/library_share/src/main/res/values/strings.xml
+++ b/library_share/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-      <string name="share_tv_save">保存</string>
+      <string name="share_tv_save">保存图片</string>
+      <string name="share_save_photo_success">图片保存成功</string>
+      <string name="share_save_photo_failure">图片保存失败</string>
+
 </resources>
