--- a/module_home/src/main/res/values/strings.xml
+++ b/module_home/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="home_hint_search">请输入关键字搜索</string>
 
     <string name="home_top_sticky">置顶</string>
-    <string name="home_toparticle_foot">查看更多</string>
+    <string name="home_toparticle_expand_foot">展开</string>
+    <string name="home_toparticle_collapse_foot">收起</string>
     <string name="home_biometric_cancel">取消</string>
     <string name="home_cancel">取消</string>
     <string name="home_hotsearch">热门搜索</string>
