--- a/module_home/src/main/res/values/strings.xml
+++ b/module_home/src/main/res/values/strings.xml
@@ -2,10 +2,10 @@
     <string name="home_app_name">module_home</string>
     <string name="home_tv_login">登录</string>
     <string name="home_hint_search">请输入关键字搜索</string>
-
     <string name="home_top_sticky">置顶</string>
     <string name="home_toparticle_expand_foot">展开</string>
     <string name="home_toparticle_collapse_foot">收起</string>
+    <string name="home_tv_realtime_title">热榜</string>
     <string name="home_biometric_cancel">取消</string>
     <string name="home_cancel">取消</string>
     <string name="home_hotsearch">热门搜索</string>
