提升Material库版本 增加开眼发现搜索交互

--- a/module_eye_discover/src/main/res/values-en/strings.xml
+++ b/module_eye_discover/src/main/res/values-en/strings.xml
@@ -4,4 +4,5 @@
     <string name="eye_discover_share_element_container">shared_element_container</string>
     <string name="eye_discover_special_topic_collect">collect</string>
     <string name="eye_discover_special_topic_share">share</string>
+    <string name="eye_discover_search_hint">Search for videos, authors, users, and tags</string>
 </resources>
