完成开眼广场模块UI显示

--- a/module_eye_square/src/main/res/values-en/strings.xml
+++ b/module_eye_square/src/main/res/values-en/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="eye_square_app_name">My Application</string>
-
+    <string name="eye_square_follow">Follow</string>
 </resources>
