--- a/module_home/src/main/res/values/strings.xml
+++ b/module_home/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="home_app_name">module_home</string>
-    <string name="home_tv_login">登录</string>
+    <string name="home_tv_login">请登录</string>
     <string name="home_hint_search">请输入关键字搜索</string>
     <string name="home_top_sticky">置顶</string>
     <string name="home_toparticle_expand_foot">展开</string>
