优化天气请求接口(100%)

--- a/library_base/src/main/res/values-en/strings.xml
+++ b/library_base/src/main/res/values-en/strings.xml
@@ -7,4 +7,10 @@
     <string name="base_unavailable_text">Confirm that the network connection is not available, please check the network settings</string>
     <string name="base_request_failure">Request failed, please try again later</string>
     <string name="base_daily_share_image">share_image</string>
+    <string name="base_light_mode">Light</string>
+    <string name="base_dark_mode">Dark</string>
+    <string name="base_follow_system_mode">Follow System</string>
+    <string name="base_settings_follow_system">Follow System</string>
+    <string name="base_settings_main_background_animation_enabled">Enable</string>
+    <string name="base_settings_main_background_animation_disabled">Disabled</string>
 </resources>
