--- a/module_realtime/src/main/res/values-en/strings.xml
+++ b/module_realtime/src/main/res/values-en/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="realtime_app_name">My Application</string>
-    <string name="realtime_home_title">百度热搜</string>
+    <string name="realtime_home_title">RealTime</string>
 </resources>
