--- a/module_realtime/src/main/res/values-en/strings.xml
+++ b/module_realtime/src/main/res/values-en/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="realtime_app_name">module_realtime</string>
     <string name="realtime_home_title">RealTime</string>
+    <string name="realtime_tv_hot_title">Search Index</string>
 </resources>
