--- a/library_widget/src/main/res/values/strings.xml
+++ b/library_widget/src/main/res/values/strings.xml
@@ -8,4 +8,19 @@
     <string name="widget_gesture_password_success">成功设置手势密码</string>
     <string name="widget_expand_hint">展开</string>
     <string name="widget_shrink_hint">收起</string>
+
+
+    <!-- Air quality -->
+    <string name="widget_air_quality_level_1">优</string>
+    <string name="widget_air_quality_level_1_description">空气质量对大多数人来说是理想的；可正常户外活动。</string>
+    <string name="widget_air_quality_level_2">良</string>
+    <string name="widget_air_quality_level_2_description">空气质量对大多数人来说是可接受的。然而，敏感人群长期暴露可能会出现轻微或中度症状。</string>
+    <string name="widget_air_quality_level_3">轻度污染</string>
+    <string name="widget_air_quality_level_3_description">空气污染已经达到了很高水平，对敏感人群是不健康的。如果您感到呼吸困难或喉咙刺激等症状，应减少户外活动时间。</string>
+    <string name="widget_air_quality_level_4">中度污染</string>
+    <string name="widget_air_quality_level_4_description">敏感人群可能立即感受到对健康的影响。健康人群长时间接触可能会出现呼吸困难和喉咙刺激。限制户外活动。</string>
+    <string name="widget_air_quality_level_5">重度污染</string>
+    <string name="widget_air_quality_level_5_description">敏感人群会立即感到健康影响，应避免户外活动。健康人群可能会感到呼吸困难和喉咙刺激；考虑待在室内，重新安排户外活动。</string>
+    <string name="widget_air_quality_level_6">严重污染</string>
+    <string name="widget_air_quality_level_6_description">在空气中的任何暴露，哪怕只是几分钟，都会对每个人的健康造成严重影响。避免户外活动。</string>
 </resources>
