--- a/module_home/src/main/res/values-en/strings.xml
+++ b/module_home/src/main/res/values-en/strings.xml
@@ -32,4 +32,5 @@
     <string name="home_eyepetizer_category">category</string>
     <string  name="home_tv_sun_moon">Sun &amp; moon</string>
     <string name="home_tv_zaobao">News</string>
+    <string name="home_weather_air_quality">Air quality</string>
 </resources>
