--- a/module_home/src/main/res/values/strings.xml
+++ b/module_home/src/main/res/values/strings.xml
@@ -31,6 +31,6 @@
     <string name="home_eyepetizer_category">分类</string>
     <string name="home_tv_sun_moon">日月升落</string>
     <string name="home_tv_zaobao">早报</string>
-
+    <string name="home_weather_air_quality">空气质量</string>
 
 </resources>
