完成早报页面

--- a/library_base/src/main/res/values/strings.xml
+++ b/library_base/src/main/res/values/strings.xml
@@ -13,4 +13,12 @@
     <string name="base_settings_follow_system">跟随系统</string>
     <string name="base_settings_main_background_animation_enabled">启用</string>
     <string name="base_settings_main_background_animation_disabled">禁用</string>
+    <string name="base_air_quality_level_1">优</string>
+    <string name="base_air_quality_level_2">良</string>
+    <string name="base_air_quality_level_3">轻度污染</string>
+    <string name="base_air_quality_level_4">中度污染</string>
+    <string name="base_air_quality_level_5">重度污染</string>
+    <string name="base_air_quality_level_6">严重污染</string>
+    <string name="base_unit_mugpcum">微克/米³</string>
+    <string name="base_unit_mgpcum">毫克/米³</string>
 </resources>
