--- a/library_base/src/main/res/values-en/strings.xml
+++ b/library_base/src/main/res/values-en/strings.xml
@@ -13,4 +13,12 @@
     <string name="base_settings_follow_system">Follow System</string>
     <string name="base_settings_main_background_animation_enabled">Enable</string>
     <string name="base_settings_main_background_animation_disabled">Disabled</string>
+    <string name="base_air_quality_level_1">Excellent</string>
+    <string name="base_air_quality_level_2">Fair</string>
+    <string name="base_air_quality_level_3">Poor</string>
+    <string name="base_air_quality_level_4">Unhealthy</string>
+    <string name="base_air_quality_level_5">Very unhealthy</string>
+    <string name="base_air_quality_level_6">Dangerous</string>
+    <string name="base_unit_mugpcum">μg/m³</string>
+    <string name="base_unit_mgpcum">mg/m³</string>
 </resources>
