1.悬浮窗调整 2.权限库优化

--- a/module_home/src/main/res/values/strings.xml
+++ b/module_home/src/main/res/values/strings.xml
@@ -35,4 +35,9 @@
     <string name="home_unknown_location">未知城市》</string>
     <string name="home_choose_city_title">选择城市</string>
     <string name="home_search_city_hint">搜索地区</string>
+    <string name="home_mp3url_empty_hint">音频数据为空，暂不能播放~</string>
+    <string name="home_open_floatmenu_title">请选择您想使用的悬浮窗方式</string>
+    <string name="home_open_floatmenu_message">- 应用内悬浮窗（仅在应用内显示）\n- 应用外悬浮窗（可在其他应用上显示）</string>
+    <string name="home_in_app_floating_window">应用内悬浮窗</string>
+    <string name="home_out_of_app_floating_window">应用外悬浮窗</string>
 </resources>
