--- a/module_home/src/main/res/values-en/strings.xml
+++ b/module_home/src/main/res/values-en/strings.xml
@@ -36,4 +36,10 @@
     <string name="home_unknown_location">Unknown City》</string>
     <string name="home_choose_city_title">Choose City</string>
     <string name="home_search_city_hint">Search City</string>
+    <string name="home_mp3url_empty_hint">Audio data is missing,unable to play~</string>
+    <string name="home_open_floatmenu_title">Please select the type of floating window</string>
+    <string name="home_open_floatmenu_message"> - In-app floating window (visible only within the app)\n
+    - Out-of-app floating window (can be displayed in other apps)</string>
+    <string name="home_in_app_floating_window">In-app floating window</string>
+    <string name="home_out_of_app_floating_window">Out-of-app floating window</string>
 </resources>
