--- a/module_home/src/main/res/values-en/strings.xml
+++ b/module_home/src/main/res/values-en/strings.xml
@@ -40,6 +40,6 @@
     <string name="home_open_floatmenu_title">Please select the type of floating window</string>
     <string name="home_open_floatmenu_message"> - In-app floating window (visible only within the app)\n
     - Out-of-app floating window (can be displayed in other apps)</string>
-    <string name="home_in_app_floating_window">In-app floating window</string>
-    <string name="home_out_of_app_floating_window">Out-of-app floating window</string>
+    <string name="home_in_app_floating_window">In-this page floating window</string>
+    <string name="home_out_of_app_floating_window">this-app floating window</string>
 </resources>
