--- a/library_base/src/main/res/values-en/strings.xml
+++ b/library_base/src/main/res/values-en/strings.xml
@@ -21,4 +21,5 @@
     <string name="base_air_quality_level_6">Dangerous</string>
     <string name="base_unit_mugpcum">μg/m³</string>
     <string name="base_unit_mgpcum">mg/m³</string>
+    <string name="base_unavailable_tip">Feature is currently unavailable</string>
 </resources>
