--- a/library_base/src/main/res/values/strings.xml
+++ b/library_base/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="base_air_quality_level_6">严重污染</string>
     <string name="base_unit_mugpcum">微克/米³</string>
     <string name="base_unit_mgpcum">毫克/米³</string>
+    <string name="base_unavailable_tip">功能暂未开放</string>
 </resources>
