--- a/module_eye_video_detail/src/main/res/values-en/strings.xml
+++ b/module_eye_video_detail/src/main/res/values-en/strings.xml
@@ -2,4 +2,6 @@
     <string name="eye_video_app_name">My Application</string>
     <string name="eye_video_share_image">share_image</string>
     <string name="eye_video_follow">follow</string>
+    <string name="eye_video_click_send_comment">click send comment</string>
+    <string name="eye_video_new_comment_title">New comment</string>
 </resources>
